--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 	background-color: #070e11;
 }
 
-p, img, label, input {
+p, img, label, input, li, span {
 	color: #44525d;
 	font-size: 12px;
 	/*font-family: 'Dosis', sans-serif;*/
@@ -23,7 +23,7 @@ b {
 	font-family: 'Roboto', sans-serif;
 }
 
-h1 {
+h1, button, .button {
 	color: white;
 	font-size: 20px;
 	font-family: 'Orbitron', sans-serif;
@@ -32,12 +32,6 @@ h1 {
 a {
 	color: #0d73cc;
 	text-decoration: none;
-}
-
-li {
-	background-color: #fff;
-	border-radius: 3px;
-	padding: 20px;
 }
 
 iframe {
@@ -93,7 +87,8 @@ iframe {
 /* ========== Login Page ========= */
 
 /* Full-width input fields */
-input[type=text], input[type=password] {
+/*input[type=text], input[type=password] {*/
+input {
 	width: 100%;
 	padding: 12px 20px;
 	margin: 8px 0;
@@ -114,24 +109,21 @@ input[type=checkbox] {
 }
 
 /* Set a style for all buttons */
-button {
+button, .button {
 	background-color: #4CAF50;
 	color: white;
 	padding: 14px 20px;
 	margin: 8px 0;
 	border: none;
 	cursor: pointer;
-	width: 100%;
 }
 
-button:hover {
+button:hover, .button:hover {
 	opacity: 0.8;
 }
 
 /* Extra styles for the cancel button */
 .cancelbtn {
-	width: auto;
-	padding: 10px 18px;
 	background-color: #f44336;
 }
 
@@ -156,7 +148,25 @@ span.psw {
 	padding-top: 16px;
 }
 
-.login {
+.form-padding {
 	margin-left: 30%;
 	margin-right: 30%;
+}
+
+.form-button-outer {
+	width: 100%;
+	text-align: center;
+}
+
+.button2 {
+	display: inline-block;
+	width: 49%;
+}
+
+.button1 {
+	width: 100%;
+}
+
+.white {
+	color: white;
 }
