Added delete button + fixed register name saving

--- a/treatmentjournal/backend/views/searchusers.hbs
+++ b/treatmentjournal/backend/views/searchusers.hbs
@@ -20,6 +20,9 @@
 		<span class="white">Client?: </span>{{user.client}}</li>
 		<li><span class="white">Password: </span>{{user.password}}</li>
 	</ul>
+	<form method="POST" action="/deleteuser/{{user.id}}?_method=DELETE">
+	<button class="button2" type="submit">Delete</button>
+	</form>
 </div>
 <a href="/">Back</a>
 </div>
