--- a/treatmentjournal/backend/views/login.hbs
+++ b/treatmentjournal/backend/views/login.hbs
@@ -1,5 +1,5 @@
 <div class=form-padding>
-<h1>Login</h1>
+<h1>Login to Notes!</h1>
 {{#if error}} <span>{{error}}</span>{{/if}}
 <form action="/login" method="post">
 	<!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
@@ -16,7 +16,7 @@
 	</div>
 
 	<div class="form-button-outer">
-  		<button class="inline-button" type="submit">Login</button>
-  		<a class="inline-button button cancelbtn" href="/register">Go to register</a>
+  		<button class="button2" type="submit">Login</button>
+  		<a class="button2 button cancelbtn" href="/register">Go to register</a>
   	</div>
 </form>
