--- a/coreplus-styles.css
+++ b/coreplus-styles.css
@@ -5,18 +5,14 @@
 }
 
 body {
-	padding: 20px;
-	font-family: 'Roboto', sans-serif;
-	background-color: #070e11;
-}
-
-.content {
 	padding: 80px;
+	font-family: 'Roboto', sans-serif;
+	background-color: white;
 }
 
 p, img, label, li, span {
-	color: #44525d;
-	font-size: 12px;
+	color: #333;
+	font-size: 14px;
 	/*font-family: 'Dosis', sans-serif;*/
 	font-family: 'Roboto', sans-serif;
 }
@@ -35,7 +31,7 @@ b {
 
 h1, button, .button {
 	color: white;
-	font-size: 20px;
+	font-size: 22px;
 	font-family: 'Orbitron', sans-serif;
 }
 
@@ -179,62 +175,4 @@ span.psw {
 
 .white {
 	color: white;
-}
-
-
-/* ========== Dashboard ========= */
-
-#clients {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(186px, 1fr));
-	grid-gap: 10px;
-}
-
-#clients div {
-}
-
-#clients div form button {
-	object-fit: cover;
-	background-color: red;
-	width: 100%;
-	height: 100%;
-	margin: 0px;
-}
-
-#clients div form button p {
-}
-
-
-
-/* ========== Navigation Bar ========= */
-
-ul.nav {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #333;
-	position: -webkit-sticky; /* Safari */
-	position: sticky;
-	top: 0;
-}
-
-ul.nav li {
-	float: left;
-}
-
-ul.nav li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
-}
-
-ul.nav li a:hover {
-	background-color: #111;
-}
-
-.active {
-	background-color: #4CAF50;
 }
