--- a/treatmentjournal/backend/views/notes/soap.hbs
+++ b/treatmentjournal/backend/views/notes/soap.hbs
@@ -1,3 +1,5 @@
+{{> notes}}
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
 {{#if error}} <span>{{error}}</span>{{/if}}
