additional cleanup + add client register page

--- a/treatmentjournal/backend/views/index.hbs
+++ b/treatmentjournal/backend/views/index.hbs
@@ -37,11 +37,9 @@
 	<form style="float: left; width: 30%; margin-right: 20px;" id="search">
 		<input type="text" placeholder="Search">
 	</form>
-	<form action="/newclient" method="POST">
-		<button style="height: 42px;" type="submit">
-			New Client
-		</button>
-	</form>
+	<a class="button" style="float: left; height: 42px;" href="users/client-register">
+		New Client
+	</a>
 </div>
 
 <br>
