Finish intake form

--- a/treatmentjournal/backend/views/partials/notes/intake.hbs
+++ b/treatmentjournal/backend/views/partials/notes/intake.hbs
@@ -173,8 +173,8 @@
 	</div>
 
 	<div>
-		<label for="med-birth">Birth control</label>
-		<input type="radio" id="med-birth" name="med-birth">
+		<label for="med-birth-control">Birth control</label>
+		<input type="radio" id="med-birth-control" name="med-birth-control">
 	</div>
 
 	<div>
